# Distributed-Learning-MZ2022-25-

./: LICENSE  README.md
CIFAR10/: README.md  client.py  pyproject.toml  run.sh  server.py
CONVNET_CD/: README.md
CONVNET_CD/CENTRALISED/: convnet.py  pyproject.toml
CONVNET_CD/CENTRALISED/convnet_c/: saved_model.pb
CONVNET_CD/CENTRALISED/convnet_c/variables/: variables.data-00000-of-00001  variables.index
CONVNET_CD/DECENTRALISED/: .central_node_progress.txt.swp  central_node_progress.txt  client.py  pyproject.toml  run.sh  server.py
CONVNET_CD/DECENTRALISED/convnet_federated/: keras_metadata.pb  saved_model.pb
CONVNET_CD/DECENTRALISED/convnet_federated/variables/: variables.data-00000-of-00001  variables.index
convnet_c/: saved_model.pb
convnet_c/variables/: variables.data-00000-of-00001  variables.index
