[build-system]
requires = [
    "poetry==1.1.13",
]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "CONVNET_C"
version = "0.1.0"
description = "Centralised (one node - one dataset) version of Simple MNIST convnet by fchollet."
authors = ["fchollet, adapted here by Scolpe"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow-cpu = "^2.6.2"
